--- a/4104.vcxproj
+++ b/4104.vcxproj
@@ -110,6 +110,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Enemy\ShootEnemy.cpp" />
     <ClCompile Include="Source\Node\BaseNode.cpp" />
     <ClCompile Include="Source\Node\BattleNode.cpp" />
     <ClCompile Include="Source\Node\HealingNode.cpp" />
@@ -166,6 +167,7 @@
     <ClCompile Include="Source\Scene\TitleScene.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Include\Enemy\ShootEnemy.h" />
     <ClInclude Include="Include\Node\BaseNode.h" />
     <ClInclude Include="Include\Node\BattleNode.h" />
     <ClInclude Include="Include\Node\HealingNode.h" />
