--- a/4104.vcxproj.filters
+++ b/4104.vcxproj.filters
@@ -212,6 +212,7 @@
     </ClCompile>
     <ClCompile Include="Source\Enemy\ShootEnemy.cpp">
       <Filter>ソース ファイル\Enemy</Filter>
+    </ClCompile>
     <ClCompile Include="Source\NPC\DealDaemon.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
@@ -405,6 +406,7 @@
     </ClInclude>
     <ClInclude Include="Include\Enemy\ShootEnemy.h">
       <Filter>ヘッダー ファイル\Enemy</Filter>
+    </ClInclude>
     <ClInclude Include="Include\NPC\DealDaemon.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
