--- a/4104.vcxproj.filters
+++ b/4104.vcxproj.filters
@@ -162,9 +162,6 @@
     <ClCompile Include="Source\Enemy\EnemyManager.cpp">
       <Filter>ソース ファイル\Enemy</Filter>
     </ClCompile>
-    <ClCompile Include="Source\Enemy\BaseEnemy.cpp">
-      <Filter>ソース ファイル\Enemy</Filter>
-    </ClCompile>
     <ClCompile Include="Source\Node\BattleNode.cpp">
       <Filter>ソース ファイル\Node</Filter>
     </ClCompile>
@@ -228,23 +225,20 @@
     <ClCompile Include="Source\NPC\PowerUpCave.cpp">
       <Filter>ソース ファイル\PowerUp</Filter>
     </ClCompile>
-    <ClCompile Include="Source\NPC\ATKUpCave.cpp">
-      <Filter>ソース ファイル\PowerUp</Filter>
-    </ClCompile>
     <ClCompile Include="Source\Base\BaseEnemy.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="Source\Player\PlayerLegNormal.cpp">
       <Filter>ソース ファイル\player</Filter>
     </ClCompile>
-    <ClCompile Include="Source\Deal\ItemShop.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
     <ClCompile Include="Source\Player\PlayerAttackGun.cpp">
       <Filter>ソース ファイル\player</Filter>
     </ClCompile>
     <ClCompile Include="Source\Player\PlayerAttackSpider.cpp">
       <Filter>ソース ファイル\player</Filter>
+    </ClCompile>
+    <ClCompile Include="EnemyBullet.cpp">
+      <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -419,9 +413,6 @@
     <ClInclude Include="Include\NPC\PowerUpCave.h">
       <Filter>ヘッダー ファイル\PowerUp</Filter>
     </ClInclude>
-    <ClInclude Include="Include\NPC\ATKUpCave.h">
-      <Filter>ヘッダー ファイル\PowerUp</Filter>
-    </ClInclude>
     <ClInclude Include="ThirdParty\magic_enum.hpp">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
@@ -451,6 +442,9 @@
     </ClInclude>
     <ClInclude Include="Include\Scene\GameScene.h">
       <Filter>ヘッダー ファイル\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="EnemyBullet.h">
+      <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
