--- a/Resources/Config/Config.json
+++ b/Resources/Config/Config.json
@@ -52,5 +52,15 @@
             ],
             "Power":1
         }
+        ,
+        "Charge":{
+            "Time":60,
+            "Speed":10,
+            "Size":[
+                210, 
+                192
+            ],
+            "Power":1
+        }
     }
 }
