--- a/Resources/Config/Config.json
+++ b/Resources/Config/Config.json
@@ -61,6 +61,21 @@
                 192
             ],
             "Power":1
+        },
+        "LongRange":{
+            "ChargeTime":80,
+            "FreezeTime":10,
+            "Bullet":
+            {
+                "Time": 10,
+                "Speed":10,
+                "Size":[
+                    210, 
+                    192
+                ],
+                "Power":1
+            }
+            
         }
     }
 }
