--- a/4104.vcxproj.filters
+++ b/4104.vcxproj.filters
@@ -239,10 +239,6 @@
     </ClCompile>
     <ClCompile Include="Source\Scene\GameOverScene.cpp">
       <Filter>ソース ファイル\Scene</Filter>
-    </ClInclude>
-=========
-    <ClCompile Include="Source\Player\PlayerLegCerberus.cpp">
-      <Filter>ソース ファイル\player</Filter>
     </ClCompile>
     <ClCompile Include="Source\Scene\GameScene.cpp">
       <Filter>ソース ファイル\Scene</Filter>
@@ -321,13 +317,13 @@
     </ClCompile>
     <ClCompile Include="Source\Enemy\Boss\BossBullet.cpp">
       <Filter>ソース ファイル</Filter>
+    </ClCompile>
     <ClCompile Include="Source\Base\TextureManager.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="Include\Util\DxlibInclude.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
->>>>>>>>> Temporary merge branch 2
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ThirdParty\imgui\imconfig.h">
@@ -437,9 +433,6 @@
     </ClInclude>
     <ClInclude Include="Include\NPC\PowerUpCave.h">
       <Filter>ヘッダー ファイル\PowerUp</Filter>
-    <ClInclude Include="ThirdParty\magic_enum.hpp">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
     </ClInclude>
     <ClInclude Include="Include\Deal\ItemShop.h">
       <Filter>ヘッダー ファイル</Filter>
@@ -473,12 +466,14 @@
     </ClInclude>
     <ClInclude Include="Include\Player\PlayerAttackSpider.h">
       <Filter>ヘッダー ファイル\player</Filter>
-    <ClInclude Include="Include\Enemy\EnemyBullet.h">
-      <Filter>ヘッダー ファイル\Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\Player\PlayerAttackGun.h">
+      <Filter>ヘッダー ファイル\player</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\Player\PlayerAttackSpider.h">
       <Filter>ヘッダー ファイル\player</Filter>
     </ClInclude>
     <ClInclude Include="Include\Scene\GameScene.h">
-      <Filter>ヘッダー ファイル\Scene</Filter>
       <Filter>ヘッダー ファイル\Scene</Filter>
     </ClInclude>
     <ClInclude Include="Include\Enemy\Boss\BossEnemy.h">
