--- a/4104.vcxproj
+++ b/4104.vcxproj
@@ -108,6 +108,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Include\Util\DxlibInclude.cpp" />
+    <ClCompile Include="Source\Base\SoundManager.cpp" />
     <ClCompile Include="Source\Enemy\Boss\BossBullet.cpp" />
     <ClCompile Include="Source\Enemy\Boss\BossLongRangeAttack.cpp" />
     <ClCompile Include="Source\Enemy\EnemyBullet.cpp" />
@@ -186,6 +187,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Include\Base\SoundManager.h" />
     <ClInclude Include="Include\Enemy\Boss\BossBullet.h" />
     <ClInclude Include="Include\Enemy\Boss\BossLongRangeAttack.h" />
     <ClInclude Include="Include\Enemy\EnemyBullet.h" />
